@@ -2022,9 +2022,11 @@ public class EMapOverviewPanel extends InternationalizedDataPanel implements Tre
     /**
      * Fiete Default fuer den Modus auf UNITS | SHIPS | BUILDINGS |COMMENTS setzen nach Vorgabe stm
      */
-    treeBuilder.setDisplayMode(Integer.parseInt(settings.getProperty("EMapOverviewPanel.filters",
-        new Integer(TreeBuilder.UNITS | TreeBuilder.BUILDINGS | TreeBuilder.SHIPS
-            | TreeBuilder.COMMENTS).toString())));
+    treeBuilder.setDisplayMode(Integer.parseInt(settings.getProperty(
+        "EMapOverviewPanel.filters",
+        Integer.valueOf(
+            TreeBuilder.UNITS | TreeBuilder.BUILDINGS | TreeBuilder.SHIPS | TreeBuilder.COMMENTS)
+            .toString())));
     return treeBuilder;
   }
 
