@@ -45,7 +45,7 @@ public abstract class MenuAction extends AbstractAction {
     setIcon(getIconName());
 
     if (getMnemonicTranslated() != null && !getMnemonicTranslated().trim().equals("")) {
-      putValue("mnemonic", new Character(getMnemonicTranslated().charAt(0)));
+      putValue("mnemonic", Character.valueOf(getMnemonicTranslated().charAt(0)));
     }
 
     if (getAcceleratorTranslated() != null && !getAcceleratorTranslated().trim().equals("")) {
